Finished first two queries

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -2,53 +2,495 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c93b1520",
+   "execution_count": 18,
+   "id": "704a2661",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3"
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "import pandasql as ps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cf901eb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn = sqlite3.connect('../raw_data/follows.csv')\n",
-    "c = conn.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a690c497",
-   "metadata": {},
+   "execution_count": 29,
+   "id": "90b8d76f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "DatabaseError",
-     "evalue": "file is not a database",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/yq/q_86mcx56d5bh8y0jd005cd00000gn/T/ipykernel_14658/1780434938.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * FROM user_id\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDatabaseError\u001b[0m: file is not a database"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>follows</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1993-09-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1989-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1993-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1994-10-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1995-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1988-08-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1988-08-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1994-04-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2000-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1986-01-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1990-02-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1996-10-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1993-09-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1995-09-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1995-09-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1996-01-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1993-09-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1996-05-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1996-05-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    user_id  follows        date\n",
+       "0         1        2  1993-09-01\n",
+       "1         2        1  1989-01-01\n",
+       "2         3        1  1993-07-01\n",
+       "3         2        3  1994-10-10\n",
+       "4         3        2  1995-03-01\n",
+       "5         4        2  1988-08-08\n",
+       "6         4        1  1988-08-08\n",
+       "7         1        4  1994-04-02\n",
+       "8         1        5  2000-01-01\n",
+       "9         5        1  2000-01-02\n",
+       "10        5        6  1986-01-10\n",
+       "11        7        1  1990-02-02\n",
+       "12        1        7  1996-10-01\n",
+       "13        1        8  1993-09-03\n",
+       "14        8        1  1995-09-01\n",
+       "15        8        9  1995-09-01\n",
+       "16        9        8  1996-01-10\n",
+       "17        7        8  1993-09-01\n",
+       "18        3        9  1996-05-30\n",
+       "19        4        9  1996-05-30"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.execute(\"SELECT * FROM user_id\")\n",
-    "rows = c.fetchall()\n",
-    "rows"
+    "follows_df = pd.read_csv('../raw_data/follows.csv')\n",
+    "follows_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "088d7697",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>house</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Harry</td>\n",
+       "      <td>Potter</td>\n",
+       "      <td>Gryffindor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ron</td>\n",
+       "      <td>Wesley</td>\n",
+       "      <td>Gryffindor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Hermonie</td>\n",
+       "      <td>Granger</td>\n",
+       "      <td>Gryffindor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ginny</td>\n",
+       "      <td>Weasley</td>\n",
+       "      <td>Gryffindor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Draco</td>\n",
+       "      <td>Malfoy</td>\n",
+       "      <td>Slytherin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Tom</td>\n",
+       "      <td>Riddle</td>\n",
+       "      <td>Slytherin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Luna</td>\n",
+       "      <td>Lovegood</td>\n",
+       "      <td>Ravenclaw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Cho</td>\n",
+       "      <td>Chang</td>\n",
+       "      <td>Ravenclaw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Cedric</td>\n",
+       "      <td>Diggory</td>\n",
+       "      <td>Hufflepuff</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id first_name last_name       house\n",
+       "0        1      Harry    Potter  Gryffindor\n",
+       "1        2        Ron    Wesley  Gryffindor\n",
+       "2        3   Hermonie   Granger  Gryffindor\n",
+       "3        4      Ginny   Weasley  Gryffindor\n",
+       "4        5      Draco    Malfoy   Slytherin\n",
+       "5        6        Tom    Riddle   Slytherin\n",
+       "6        7       Luna  Lovegood   Ravenclaw\n",
+       "7        8        Cho     Chang   Ravenclaw\n",
+       "8        9     Cedric   Diggory  Hufflepuff"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users_df = pd.read_csv('../raw_data/users.csv')\n",
+    "users_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ed18d81",
+   "metadata": {},
+   "source": [
+    "# How many users in each house?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8c78f315",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count(user_id)</th>\n",
+       "      <th>house</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Gryffindor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Hufflepuff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ravenclaw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Slytherin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   count(user_id)       house\n",
+       "0               4  Gryffindor\n",
+       "1               1  Hufflepuff\n",
+       "2               2   Ravenclaw\n",
+       "3               2   Slytherin"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps.sqldf(\"SELECT count(user_id),house FROM users_df GROUP BY house\",locals())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54455cbc",
+   "metadata": {},
+   "source": [
+    "# List all following links that were created before September 1st, 1993"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f179a136",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>follows</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1993-09-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  follows        date\n",
+       "0        1        2  1993-09-01"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps.sqldf(\"SELECT * FROM follows_df Where date <= '1993-09-01' Group by user_id+follows HAVING COUNT(user_id+follows) > 1\",locals())\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b6709c5",
+   "id": "265c6cf2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8640727a",
    "metadata": {},
    "outputs": [],
    "source": []
